tests/baselines/reference/augmentedTypesInterface.errors.txt
tests/cases/compiler/augmentedTypesInterface.ts(23,11): error TS2567: Enum declarations can only merge with namespace or other enum declarations.
tests/cases/compiler/augmentedTypesInterface.ts(26,6): error TS2567: Enum declarations can only merge with namespace or other enum declarations.


==== tests/cases/compiler/augmentedTypesInterface.ts (2 errors) ====
    // interface then interface
    
    interface i {
        foo(): void;
    }
    
    interface i {
        bar(): number;
    }
    
    // interface then class
    interface i2 {
        foo(): void;
    }
    
    class i2 {
        bar() {
            return 1;
        }
    }
    
    // interface then enum
    interface i3 { // error
              ~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
        foo(): void;
    }
    enum i3 { One }; // error
         ~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
    
    // interface then import
    interface i4 {
        foo(): void;
    }
    
    //import i4 = require('');  // error